--- a/manifest.json
+++ b/manifest.json
@@ -25,6 +25,6 @@
   ],
   "start_url": "/index.html",
   "display": "standalone",
-  "background_color": "#7bd1ca",
-  "theme_color": "#7bd1ca"
+  "background_color": "#e8a87c",
+  "theme_color": "#e8a87c"
 }
