--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,12 @@
 {
   "name": "CDI agora",
   "short_name": "CDI",
+  "description": "Veja a taxa de rendimento anual e mensal do CDI",
+  "theme_color": "#e8a87c",
+  "background_color": "#e8a87c",
+  "display": "standalone",
+  "start_url": "https://gutomotta.github.io/cdi-agora",
+  "scope": "/",
   "icons": [{
     "src": "icons/icon-128x128.png",
       "sizes": "128x128",
@@ -22,9 +28,5 @@
       "sizes": "512x512",
       "type": "image/png"
     }
-  ],
-  "start_url": "/index.html",
-  "display": "standalone",
-  "background_color": "#e8a87c",
-  "theme_color": "#e8a87c"
+  ]
 }
