Improve SEO by adding meta tags

--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
   "name": "CDI agora",
   "short_name": "CDI",
   "description": "Veja a taxa de rendimento anual e mensal do CDI",
-  "theme_color": "#e8a87c",
-  "background_color": "#e8a87c",
+  "theme_color": "#7bd1ca",
+  "background_color": "#7bd1ca",
   "display": "standalone",
   "start_url": "https://gutomotta.github.io/cdi-agora",
   "scope": "/",
